@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.5.12-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-05-12 09:22:53, took 00:09:47, with 60 workers, on 544 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-05-12 10:11:41, took 00:09:15, with 60 workers, on 544 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
