@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.5.12-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-05-12 09:22:53, took 00:09:47, with 60 workers, on 544 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-05-12 10:11:41, took 00:09:15, with 60 workers, on 544 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
