@@ -15751,3 +15751,6 @@ failed: dhcp with excluded address
 ---------------------------------- 2024-05-11 07:24:54 24.5.11
 no failed: dhcp with excluded address
 qc pass: dhcp with excluded address
+---------------------------------- 2024-05-12 09:46:25 24.5.12
+no qc pass: dhcp with excluded address
+failed: dhcp with excluded address
